--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi quae eligendi sapiente quam, qui dolore voluptas fuga nostrum obcaecati incidunt dicta possimus placeat vel nulla molestias accusamus labore voluptate odio?</p>   
